Fix footer links alignment, fix order of footer links, hide sign up link on footer on mobile breakpoint

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,18 +156,12 @@ footer {
     height: 90px;
     background-color: #B8F2E6;
     display: flex;
+    align-items: center;
 }
 
 .footer-links {
     width: 100%;
-    display: inline-flex;
-    justify-content: space-around;
-
-}
-
-.footer-links {
-    justify-content: flex-start;
-    margin: 0 20px;
+    text-align: center;
     text-decoration: none;
 }
 
@@ -263,5 +257,9 @@ button[type=submit] {
 
     .call-to-action {/*resize button for mobile screen viewing*/
         font-size: 20px;
+    }
+
+    .hide {
+        display: none;
     }
 }
